# ak-recruiter

./: README.md  pyproject.toml
akrecruiter/: __main__.py
