[tool.poetry]
name = "ak-recruiter"
version = "0.1.1"
description = ""
authors = ["Skie Radscale <skie@skie.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pyscreenshot = "^3.1"
PyGetWindow = "^0.0.9"
numpy = "^1.26.0"
easyocr = "^1.7.1"
click = "^8.1.7"
torch = "^2.3.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
